Gf product slider - image css

--- a/css/gf-product-slider-widget.css
+++ b/css/gf-product-slider-widget.css
@@ -77,3 +77,12 @@
 #profile-grid .panel-thumbnail { overflow: hidden; }
 #profile-grid .img-rounded { border-radius: 4px 4px 0 0;}
 
+
+.widget_gf_product_slider_widget{
+    width: 100%;
+}
+
+.gf-slider-row img {
+    width: 100%;
+    height: auto;
+}
