--- a/css/gf-product-slider-widget.css
+++ b/css/gf-product-slider-widget.css
@@ -196,21 +196,46 @@ html .ui-button.ui-state-disabled:active,
   color: transparent;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1200px) {
   .gf-product-slider__tabs {
     margin-left: 0;
+  }
+
+  .ui-widget-header .ui-state-default {
+    color: transparent;
+  }
+
+  .ui-tabs-anchor:first-child {
+	  padding-left: 0 !important;
+  }
+
+  .gf-product-slider__header__controls {
     width: 100%;
-    margin-top: 16px;
+    margin: 10px 0;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+
+  .gf-product-slider {
+    padding: 0;
+  }
+
+  .gf-product-slider__tabs {
+    margin: 20px 0;
   }
 
   .gf-product-slider__header {
-    flex-wrap: wrap;
+    flex-flow: wrap;
     padding-bottom: 15px;
   }
 
   .gf-product-slider__header__title {
-    width: 50%;
-    z-index: 200;
+    width: 100%;
+  }
+
+  .gf-product-slider__header__title a {
+    font-size: 1.3rem;
   }
 
   .ui-tabs .ui-tabs-nav li,
@@ -223,12 +248,7 @@ html .ui-button.ui-state-disabled:active,
   }
 
   .gf-product-slider__header__controls {
-    position: absolute;
-    top: 15px;
     width: 100%;
-    text-align: right;
-    padding-right: 20px;
-    z-index: 100;
   }
 
   .gf-product-slider__header__controls--without-tabs {
