--- a/css/gf-product-slider-widget.css
+++ b/css/gf-product-slider-widget.css
@@ -53,6 +53,7 @@
 
 .gf-product-slider__header--without-tabs {
   padding-bottom: 10px;
+  align-items: baseline;
 }
 
 .gf-product-slider__header__title a {
@@ -75,6 +76,7 @@
 
 .gf-product-slider__header__controls--without-tabs {
   padding-bottom: 10px;
+  width: auto;
 }
 
 .gf-product-slider__header a.gf-product-slider__header-control {
@@ -213,6 +215,10 @@ html .ui-button.ui-state-disabled:active,
     width: 100%;
     margin: 10px 0;
   }
+
+  .gf-product-slider__header__controls--without-tabs {
+    width: auto;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -232,6 +238,10 @@ html .ui-button.ui-state-disabled:active,
 
   .gf-product-slider__header__title {
     width: 100%;
+  }
+
+  .gf-product-slider__header--without-tabs .gf-product-slider__header__title {
+    width: auto;
   }
 
   .gf-product-slider__header__title a {
@@ -257,5 +267,19 @@ html .ui-button.ui-state-disabled:active,
     text-align: right;
     padding-right: 0;
     z-index: 100;
+  }
+
+  .slider-item h5,
+  .slider-item .price {
+    text-align: left;
+  }
+
+  .slider-item h5 {
+    font-size: 0.8em;
+  }
+
+  .slider-item .price {
+    font-size: 1.3em;
+    display: block;
   }
 }
