--- a/css/gf-product-box-widget.css
+++ b/css/gf-product-box-widget.css
@@ -17,7 +17,8 @@
 }
 
 .gf-category-box__body {
-  padding-top: 15px;
+  padding: 15px 15px 0;
+  justify-content: space-between;
 }
 
 .gf-category-box__body .gf-category-box__item .onsale {
@@ -26,8 +27,17 @@
   left: 0;
 }
 
+.gf-category-box__body .gf-category-box__item {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.gf-category-box__item > a:hover {
+  color: #454545;
+}
+
 .gf-category-box__item  h5 {
-  font-size: 0.8em;
+  font-size: 1em;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 10px;
@@ -38,19 +48,41 @@
   height: auto;
 }
 
+@media only screen and (min-width: 1200px) {
+  .gf-category-box__item:nth-child(n+6) {
+    display: none;
+  }
+}
 
 @media only screen and (max-width: 1200px) {
-	.gf-category-box__item:nth-child(n+5) {
-		display: none;
-	}
-  .gf-category-box__item  h5 {
-    font-size: 0.75em;
+  .gf-category-box__item:nth-child(n+5) {
+    display: none;
+  }
+
+  .gf-category-box__body .gf-category-box__item {
+    padding-left: 10px;
+  }
+}
+
+@media only screen and (max-width: 992px) and (min-width: 767px) {
+  .gf-category-box__item:nth-child(n+4) {
+    display: none;
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .gf-category-box__item  h5 {
-    font-size: 0.8em;
+  .gf-category-box__item:nth-child(n+5) {
+    display: none;
+  }
+
+  .gf-category-box {
+    padding: 0;
+  }
+
+  .gf-category-box__body .gf-category-box__item {
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 20px;
   }
 }
 
