--- a/css/gf-product-box-widget.css
+++ b/css/gf-product-box-widget.css
@@ -30,10 +30,17 @@
 .gf-category-box__body .gf-category-box__item {
   padding-left: 0;
   padding-right: 0;
+  display: flex;
+  flex-flow: column;
 }
 
 .gf-category-box__item > a:hover {
   color: #454545;
+}
+
+.gf-category-box__item > a:last-child {
+  margin: auto 0 0;
+  align-self: flex-end;
 }
 
 .gf-category-box__item  h5 {
