--- a/css/gf-product-box-widget.css
+++ b/css/gf-product-box-widget.css
@@ -40,7 +40,22 @@
 
 .gf-category-box__item > a:last-child {
   margin: auto 0 0;
-  align-self: flex-end;
+  align-self: center;
+  padding: .718em .2em;
+  width: 100%;
+  text-transform: uppercase;
+  text-align: center;
+  border: solid 2px #e8e8e8;
+  border-radius: 4px;
+  background: #fff;
+  color: #515151;
+  font-size: 0.8em;
+  font-weight: 700;
+  transition: 0.2s all;
+}
+
+.gf-category-box__item > a:last-child:hover {
+  border-color: #f45411;
 }
 
 .gf-category-box__item  h5 {
