--- a/css/gf-social-icons-widget.css
+++ b/css/gf-social-icons-widget.css
@@ -86,7 +86,18 @@ a.socialIcon:hover, .socialHoverClass {
     -ms-transition: all 0.8s;
     transition: all 0.8s;
 }
-
+.widget_gf_social_icons_widget {
+    border-top: solid 30px #F45411;
+    text-align: left;
+    border-bottom: solid 30px #F45411;
+}
+.widget_gf_social_icons_widget ul li {
+    display: block;
+    text-align: left;
+}
+.widget_gf_social_icons_widget h2.widgettitle {
+    margin: 20px 0;
+}
 @media only screen and (max-width: 1200px) {
   .widget_gf_social_icons_widget h2.widgettitle {
     text-align: center;
@@ -106,5 +117,4 @@ a.socialIcon:hover, .socialHoverClass {
   .icoRss {
     margin: 10px auto !important;
   }
-
 }
